bin/JSON/JSON.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{  static = true;}PARSER_BEGIN(JSON)package JSON;

public class JSON{  public static void main(String args []) throws ParseException  {    JSON parser = new JSON(System.in);    while (true)    {      System.out.println("Reading from standard input...");      System.out.print("Enter an expression like \"1+(2+3)*4;\" :");      try      {        switch (JSON.one_line())        {          case 0 :           System.out.println("OK.");          break;          case 1 :           System.out.println("Goodbye.");          break;          default :           break;        }      }      catch (Exception e)      {        System.out.println("NOK.");        System.out.println(e.getMessage());        JSON.ReInit(System.in);      }      catch (Error e)      {        System.out.println("Oops.");        System.out.println(e.getMessage());        break;      }    }  }}PARSER_END(JSON)SKIP :{  " "| "\r"| "\t"| "\n"}TOKEN :{	< INTEGER : (["0"-"9"])+ >
|  < IDENTIFIER : (["A"-"Z","a"-"z"])(["0"-"9","A"-"Z","a"-"z"])* > 
|  < COMMA : [","]> 
| 	< LF : ["\n"]>}
void JSON() : {}
{
  (Nodes() <COMMA> Links()) <LF> 
/*<INTEGER> ( (“+” | “-“) <INTEGER> )? <LF>*/
}

void Nodes() : {}
{	("\"nodes\"")
}

void Links() : {}
{	("\"links\"")
}
